# cloud-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
cloud-api-installr/: Cargo.toml
cloud-api-installr/src/: config.rs  constants.rs  main.rs
cloud-api-installr/src/extension/: mod.rs  uninstall.rs
cloud-api-installr/src/metaserver/: client.rs  error.rs
cloud-api-installr/src/service/: mod.rs  setup.rs
cloudapi-agent/: Cargo.toml
cloudapi-agent/src/: config.rs  main.rs
cloudapi-agent/src/extension/: uninstall.rs
cloudapi-agent/src/service/: mod.rs  setup.rs
cloudapi-installr/: Cargo.toml
cloudapi-installr/src/: config.rs  constants.rs  main.rs
cloudapi-installr/src/extension/: uninstall.rs
cloudapi-installr/src/service/: mod.rs  setup.rs
cloudapi-sdk/: Cargo.toml
cloudapi-sdk/src/: client.rs  error.rs  lib.rs
cloudapi-sdk/src/model/: compute.rs  extension.rs  mod.rs
cloudapi-server/: Cargo.toml
cloudapi-server/src/: main.rs
deployment/: virtual_machine.json  virtual_machine_test.json
