[package]
name = "cloudapi-sdk"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
thiserror = "2.0.12"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["signal", "process", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
notify = "8.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.6.1"
sha2 = "0.10"   # Or `blake3 = "1.4"` for faster hashing

[target."cfg(windows)".dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[build-dependencies]

[target."cfg(windows)".build-dependencies]

[dev-dependencies]

[features]